--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "electron ."
+    "start": "electron ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^31.0.0"
+    "electron": "^31.0.0",
+    "express": "^4.19.2",
+    "pg": "^8.12.0"
   }
 }
